DRDT-25: fixed the slinky choosing wrong menu, hamburger menu hiding behind content issue

--- a/web/wp-content/themes/bumblebee/sass/article/_single.scss
+++ b/web/wp-content/themes/bumblebee/sass/article/_single.scss
@@ -3,6 +3,7 @@
 		margin: 0 auto;
 		max-width: 1260px;
 		padding-top: 100px;
+		z-index: 0;
 
 		article h3 {
 			font-size: 30px;
