--- a/web/wp-content/themes/bumblebee/sass/homepage/_homepage.scss
+++ b/web/wp-content/themes/bumblebee/sass/homepage/_homepage.scss
@@ -1,5 +1,6 @@
 .home-page {
 	position: relative;
+	z-index: 0;
 
 	h5 {
 		margin: 10px auto;
